--- a/public/template/assets/css/login.css
+++ b/public/template/assets/css/login.css
@@ -59,20 +59,20 @@
     position: relative;
     height: 100vh;
     width: 1194px;
-    background: url("https://i.ibb.co/RhMZprS/jony-Image2-1.png") no-repeat center center scroll;
+    background-color: aliceblue;
     background-size: cover;
     float: left;
     -webkit-animation: bgslide 2.3s forwards;
             animation: bgslide 2.3s forwards;
   }
   .bg-illustration img {
-    width: 248px;
+    width: 500px;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
     height: auto;
-    margin: 19px 0 0 25px;
+    margin: 60px 0 0 80px;
   }
   
   @-webkit-keyframes bgslide {
