--- a/public/template/assets/css/login.css
+++ b/public/template/assets/css/login.css
@@ -59,20 +59,22 @@
     position: relative;
     height: 100vh;
     width: 1194px;
-    background-color: aliceblue;
+    /* margin-top: 250px; */
+    background-color: #89C4E1;
     background-size: cover;
     float: left;
     -webkit-animation: bgslide 2.3s forwards;
             animation: bgslide 2.3s forwards;
   }
   .bg-illustration img {
-    width: 500px;
+    width: 300px;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
     height: auto;
-    margin: 60px 0 0 80px;
+    margin: 250px 0 0 180px;
+    position: relative;
   }
   
   @-webkit-keyframes bgslide {
@@ -261,7 +263,7 @@
     }
     .bg-illustration {
       float: none;
-      background: url("https://i.ibb.co/rwncw7s/bg-mobile.png") center center;
+      /* background: url("https://i.ibb.co/rwncw7s/bg-mobile.png") center center; */
       background-size: cover;
       -webkit-animation: slideIn 0.8s ease-in-out forwards;
               animation: slideIn 0.8s ease-in-out forwards;
@@ -272,7 +274,7 @@
     .bg-illustration img {
       width: 100px;
       height: auto;
-      margin: 20px auto !important;
+      margin: 50px auto !important;
       text-align: center;
     }
     .bg-illustration .burger-btn {
