--- a/public/template/assets/css/login.css
+++ b/public/template/assets/css/login.css
@@ -60,7 +60,10 @@
     height: 100vh;
     width: 1194px;
     /* margin-top: 250px; */
-    background-color: #89C4E1;
+    background-color: rgba(51,204,197,255);
+    background: -webkit-linear-gradient(to right, #a3e2df 50%, #ffffff 100%);
+    background: -moz-linear-gradient(to right, #a3e2df 0%, #ffffff 100%);
+    background: linear-gradient(to right, #a3e2df 0%, #ffffff 100%);
     background-size: cover;
     float: left;
     -webkit-animation: bgslide 2.3s forwards;
