--- a/public/template/assets/css/templatemo-seo-dream.css
+++ b/public/template/assets/css/templatemo-seo-dream.css
@@ -1465,7 +1465,7 @@ Services Style
   border: 2px solid #f7f7f7;
   border-radius: 5px;
   transition: all .3s;
-  margin-bottom: 30px;
+  margin-bottom: auto;
 }
 
 .service-item:hover {
